--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-parcelize'
+    id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs'
 }
 
@@ -59,6 +59,10 @@ android {
 
 dependencies {
 
+    def daggerVersion = '2.37'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     // Android Core
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -71,6 +75,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Dagger 2
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-rc01'
