--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ android {
 
 dependencies {
 
-    def daggerVersion = '2.40.5'
+    def daggerVersion = '2.41'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -70,7 +70,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0-rc01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-beta01'
 
     // Material Views
     implementation 'com.google.android.material:material:1.5.0'
@@ -87,6 +87,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // Timber
-    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation "com.jakewharton.timber:timber:5.0.1"
 
 }
