--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,20 +61,20 @@ android {
 
 dependencies {
 
-    def daggerVersion = '2.41'
+    def daggerVersion = '2.42'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Android Core
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-rc02'
 
     // Material Views
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
